<resources>
    <string name="app_name" translatable="false">AnyFlow</string>
    <string name="connect_server_hint">Server</string>
    <string name="connect_username_hint">Username</string>
    <string name="connect_password_hint">Password</string>
    <string name="connect_api_token_hint">API token</string>
    <string name="connect_connect_action">Connect</string>
    <string name="connect_wait_label">Connection, please wait…</string>
    <string name="connect_error_extends">Cannot extend the session</string>
    <string name="filter_display_title_is">Song title is &lt;b&gt;%s&lt;/b&gt;</string>
    <string name="filter_display_genre_is">Genre is &lt;b&gt;%s&lt;/b&gt;</string>
    <string name="filter_display_search">Anything contain &lt;b&gt;%s&lt;/b&gt;</string>
    <string name="filter_display_song_is">Song is &lt;b&gt;%s&lt;/b&gt;</string>
    <string name="filter_display_artist_is">Artist is &lt;b&gt;%s&lt;/b&gt;</string>
    <string name="filter_display_album_artist_is">Album artist is &lt;b&gt;%s&lt;/b&gt;</string>
    <string name="filter_display_album_is">Album is &lt;b&gt;%s&lt;/b&gt;</string>
    <string name="filter_display_disk_is">Disk is &lt;b&gt;%s&lt;/b&gt;</string>
    <string name="filter_display_title_contain">Song title contain &lt;b&gt;%s&lt;/b&gt;</string>
    <string name="filter_display_playlist_is">Song is in playlist &lt;b&gt;%s&lt;/b&gt;</string>
    <string name="filter_display_is_downloaded">Song is downloaded</string>
    <string name="filter_display_is_not_downloaded">Song is not downloaded</string>
    <string name="filter_display_podcast_episode_is">Podcast episode is &lt;b&gt;%s&lt;/b&gt;</string>
    <string name="library_title_main">Library</string>
    <string name="library_type_genre">Genre</string>
    <string name="library_type_album_artist">Album’s artist</string>
    <string name="library_type_artist">Artist</string>
    <string name="library_type_album">Album</string>
    <string name="library_type_song">Song</string>
    <string name="library_type_playlist">Playlist</string>
    <string name="library_type_download">Downloaded</string>
    <string name="library_type_podcast_episode">Podcast episode</string>
    <string name="filter_type_search">Search</string>
    <string name="filter_title_saved">Saved filters</string>
    <string name="filter_add_error">You cannot add anymore filters</string>
    <string name="menu_alarms">Alarms</string>
    <string name="menu_shortcuts">Shortcuts</string>
    <string name="menu_playlist">Playlists</string>
    <string name="menu_filters">Filters</string>
    <string name="menu_library">Library</string>
    <string name="menu_order_random">Random</string>
    <string name="menu_order_classic">Classic</string>
    <string name="menu_playlist_create">Create a new playlist</string>
    <string name="menu_playlist_select">Selection mode</string>
    <string name="menu_playlist_delete">Delete the playlist</string>
    <string name="menu_playlist_play">Play the playlist</string>
    <string name="menu_playlist_song_remove">Remove from the playlist</string>
    <string name="general_loading_label">Loading, please wait…</string>
    <string name="action_filter_confirm">Confirm</string>
    <string name="action_filter_clear">Clear filters</string>
    <string name="action_filter_add">Add filters</string>
    <string name="action_filter_save">Save filters</string>
    <string name="notification_title_artist">%1$s by %2$s</string>
    <string name="display_reconnecting">Reconnecting</string>
    <string name="confirm">Confirm</string>
    <string name="connect_error_credentials">Cannot log in with provided credentials</string>
    <string name="connect_error_timeout">Cannot connect to the server, please try again later</string>
    <string name="player_controls_unknown">Unknown</string>
    <string name="player_playing_now">Now playing</string>
    <string name="ok">OK</string>
    <string name="update_songs">Updating songs: %02d %%</string>
    <string name="update_genres">Updating genres: %02d %%</string>
    <string name="update_artists">Updating artists: %02d %%</string>
    <string name="update_albums">Updating albums: %02d %%</string>
    <string name="update_playlists">Updating playlists: %02d %%</string>
    <string name="cancel">Cancel</string>
    <string name="filter_group_name">Filter group name</string>
    <string name="generic_select_all">Select all</string>
    <string name="generic_select_none">Select none</string>
    <string name="info_title">Title</string>
    <string name="info_duration">Duration</string>
    <string name="info_artist">Artist</string>
    <string name="info_track">Track</string>
    <string name="info_album">Album</string>
    <string name="info_disk">Disk</string>
    <string name="info_year">Year</string>
    <string name="info_album_artist">Album\'s artist</string>
    <string name="info_genre">Genre</string>
    <string name="info_playlist">Playlist</string>
    <string name="info_action_track_next">Play this song next</string>
    <string name="info_action_next_title">Play next</string>
    <string name="info_action_select_playlist">Select playlists</string>
    <string name="info_action_new_playlist">Playlist\'s name</string>
    <string name="info_action_delete_playlist">Are you sure you want to delete this playlist?</string>
    <string name="info_action_remove_from_playlist">Are you sure you want to remove these songs from this playlist?</string>
    <string name="info_action_select_playlist_detail">Select the playlists which will contains %1$s</string>
    <string name="info_action_filter_on">Filter on %1$s</string>
    <string name="info_action_search_on">Search %1$s in current playing list</string>
    <string name="info_action_filter_title">Filter</string>
    <string name="info_action_search_title">Search</string>
    <string name="info_action_download">Download</string>
    <string name="info_action_downloaded">Downloaded</string>
    <string name="info_action_download_description">%1$s will be available for offline listening</string>
    <string name="info_action_downloaded_description">This song is available for offline listening</string>
    <string name="alarm_repeat">Repeat</string>
    <string name="weekday_monday">Monday</string>
    <string name="weekday_tuesday">Tuesday</string>
    <string name="weekday_wednesday">Wednesday</string>
    <string name="weekday_thursday">Thursday</string>
    <string name="weekday_friday">Friday</string>
    <string name="weekday_saturday">Saturday</string>
    <string name="weekday_sunday">Sunday</string>
    <string name="weekday_everyday">Everyday</string>
    <string name="alarm_add">Add alarm</string>
    <string name="alarm_edit">Edit alarm</string>
    <string name="alarm_list">List of alarms</string>
    <string name="alarm_is_repeating">Is repeating</string>
    <string name="alarm_is_not_repeating">One time</string>
    <string name="alarm_permission">Permission</string>
    <string name="alarm_permission_explanation">Before setting up an alarm, you should give anyflow the permission to wake your device</string>
    <string name="alarm_give_permission">Give permission</string>
    <string name="alarm_active">Active</string>
    <string name="filter_is_downloaded">Downloaded</string>
    <string name="filter_is_not_downloaded">Not downloaded</string>
    <string name="shortcuts_description">Select the actions you want to perform faster. It will only take a swipe left on a song to find your preferred actions.</string>
    <string name="shortcut_count_title">Selected actions:</string>
    <string name="filter_info_duration">Total duration</string>
    <string name="filter_info_genre">Genres</string>
    <string name="filter_info_album_artist">Album\'s artists</string>
    <string name="filter_info_album">Albums</string>
    <string name="filter_info_artist">Artists</string>
    <string name="filter_info_song">Songs</string>
    <string name="filter_info_playlist">Playlists</string>
    <string name="filter_info_downloaded">Downloaded</string>
    <string name="filter_info_podcast_episodes">Podcast episodes</string>
    <string name="playlist_presence" translatable="false">%1$d/%2$d</string>
    <string name="no_internet">No internet</string>
    <string name="playlist_progress_title">Playlists changes</string>
    <string name="playlist_playlist_title">Playlists</string>
    <string name="dummy_title">Song\'s Title</string>
    <string name="dummy_artist">My Favorite Artist</string>
    <string name="dummy_album">Their Best Album</string>
    <string name="dummy_genre">Classical</string>
    <string name="dummy_playlist">Road trip</string>
    <string name="or">Or</string>
    <plurals name="playlist_songs_count">
        <item quantity="one">1 song</item>
        <item quantity="other">%d songs</item>
    </plurals>
    <plurals name="days_component">
        <item quantity="one">%d day,\u0020</item>
        <item quantity="many">%d days,\u0020</item>
        <item quantity="other">%d days,\u0020</item>
    </plurals>
    <plurals name="hours_component">
        <item quantity="one">%d hour,\u0020</item>
        <item quantity="many">%d hours,\u0020</item>
        <item quantity="other">%d hours,\u0020</item>
    </plurals>
    <plurals name="minutes_component">
        <item quantity="one">%d minute,\u0020</item>
        <item quantity="many">%d minutes,\u0020</item>
        <item quantity="other">%d minutes,\u0020</item>
    </plurals>
    <plurals name="seconds_component">
        <item quantity="one">%d second</item>
        <item quantity="many">%d seconds</item>
        <item quantity="other">%d seconds</item>
    </plurals>
</resources>
