<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="viewModel"
            type="be.florien.anyflow.feature.player.ui.info.song.shortcuts.ShortcutsViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/xxLargeDimen"
            android:background="@color/primary"
            android:elevation="@dimen/mediumDimen"
            android:theme="@style/ToolBarStyle"
            app:layout_constraintTop_toTopOf="parent"
            app:title="@string/menu_shortcuts"
            app:titleTextColor="@color/accent" />

        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:gravity="center"
            android:text="@string/shortcuts_description"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/toolbar" />

        <TextView
            android:id="@+id/countTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:text="@string/shortcut_count_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/description" />

        <TextView
            android:id="@+id/count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:text="@{viewModel.currentActionsCountDisplay}"
            android:textStyle="bold"
            app:layout_constraintLeft_toRightOf="@+id/countTitle"
            app:layout_constraintTop_toBottomOf="@id/description" />

        <include
            android:id="@+id/songExample"
            layout="@layout/item_song"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:art="@{viewModel.dummyCover}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/countTitle"
            app:selected="@{false}"
            app:song="@{viewModel.dummySongDisplay}" />

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/fragment_container_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/songExample" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>